# approximate-matrix-accelerator

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  codemeta.json  matfma_top_accel_csynth_ed.rpt  meson.build  report
docs/: Doxyfile
includes/: linear.hpp  operations.hpp  version.hpp
includes/hw-fma/: fma.hpp  matfma.hpp
includes/hw-ops/: MatrixAdd.hpp  MatrixElementWise.hpp  MatrixMultiply.hpp  MatrixMultiplyAdd.hpp  MatrixOperator.hpp  MatrixOperators.hpp  Softmax.hpp  (+8 more)
operations_hls/: mat_mul_add.hpp  matadd.hpp  matmul.hpp  operations_test.cpp  operations_top.cpp  operations_top.hpp
operations_sw/: mat_mul_add_sw.hpp  matadd_sw.hpp  operations_top_sw.cpp  operations_top_sw.hpp
reports-fma/: fma_top_accel_csynth.rpt  fma_top_accel_csynth_2x2.xml  fma_top_accel_csynth_4x4.rpt  fma_top_accel_csynth_8x8.rpt
reports-operations/: fma_top_accel_csynth_12x12.rpt  fma_top_accel_csynth_12x12.xml  fma_top_accel_csynth_16x16.xml  fma_top_accel_csynth_2x2.rpt  fma_top_accel_csynth_4x4.xml  fma_top_accel_csynth_8x8.xml  operations_top_accel_csynth_12x12.rpt  operations_top_accel_csynth_12x12.xml  operations_top_accel_csynth_16x16.rpt  operations_top_accel_csynth_16x16.xml  operations_top_accel_csynth_2x2.rpt  operations_top_accel_csynth_2x2.xml  operations_top_accel_csynth_4x4.rpt  operations_top_accel_csynth_4x4.xml  operations_top_accel_csynth_8x8.rpt  operations_top_accel_csynth_8x8.xml
results/: matfma_report.data  maxerrs_matfma.data
test/: meson.build
test/sw-ops/: matadd.cpp  matfma.cpp  matmac.cpp  matmul.cpp  meson.build  softmax.cpp  testbench.hpp
(+100 files in other folders)
