matadd_src = ['matadd.cpp']
matmac_src = ['matmac.cpp']
matmul_src = ['matmul.cpp']
matfma_src = ['matfma.cpp']

executable('matadd', matadd_src, include_directories : include_dir)
executable('matmul', matmul_src, include_directories : include_dir)
executable('matmac', matmac_src, include_directories : include_dir)
executable('matfma', matfma_src, include_directories : include_dir)
